exports[`createHakukohde > should be able to create ammatillinen hakukohde #0`] =
{
  "alkamiskausiKoodiUri": "kausi_0#1",
  "alkamisvuosi": 2020,
  "aloituspaikat": 10,
  "ensikertalaisenAloituspaikat": null,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [
    {
      "alkaa": "2019-04-02T10:45",
      "paattyy": "2019-11-25T23:59"
    }
  ],
  "hakulomakeAtaruId": "lomake_1",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunAlkamiskautta": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [
    {
      "kuvaus": {
        "fi": "Kuvaus"
      },
      "nimi": {
        "fi": "Nimi"
      },
      "toimitusaika": "2019-11-25T23:59",
      "toimitusosoite": {
        "osoite": {
          "osoite": {
            "fi": "Osoite"
          },
          "postinumeroKoodiUri": "posti_0#2"
        },
        "sahkoposti": "sahkoposti@email.com"
      },
      "toimitustapa": "osoite",
      "tyyppiKoodiUri": "liitetyypitamm_0#1"
    }
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus</p>"
    }
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Hakukohteen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimustoinenaste_0#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Tarkenne</p>"
  },
  "tila": "julkaistu",
  "toinenAsteOnkoKaksoistutkinto": true,
  "toteutusOid": "2.1.1.1.1.1",
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>ohjeet ennakkovalmistautumiseen</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>ohjeet erityisjärjestelyihin</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa hakijalle</p>"
        }
      },
      "nimi": {
        "fi": "nimi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-02T10:45",
            "paattyy": "2019-04-02T19:00"
          },
          "jarjestamispaikka": {
            "fi": "paikka"
          },
          "lisatietoja": {
            "fi": "lisatietoja"
          },
          "osoite": {
            "osoite": {
              "fi": "osoite"
            },
            "postinumeroKoodiUri": "posti_0#2"
          }
        }
      ],
      "tyyppiKoodiUri": "valintakokeentyyppi_1#1"
    }
  ],
  "valintaperusteId": "649adb37-cd4d-4846-91a9-84b58b90f928"
};

exports[`createHakukohde > should be able to create korkeakoulu hakukohde #0`] =
{
  "alkamiskausiKoodiUri": "kausi_0#1",
  "alkamisvuosi": 2020,
  "aloituspaikat": 10,
  "ensikertalaisenAloituspaikat": 5,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [
    {
      "alkaa": "2019-04-02T10:45",
      "paattyy": "2019-11-25T23:59"
    }
  ],
  "hakulomakeAtaruId": "lomake_1",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunAlkamiskautta": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [
    {
      "kuvaus": {
        "fi": "Kuvaus"
      },
      "nimi": {
        "fi": "Nimi"
      },
      "toimitusaika": "2019-11-25T23:59",
      "toimitusosoite": {
        "osoite": {
          "osoite": {
            "fi": "Osoite"
          },
          "postinumeroKoodiUri": "posti_0#2"
        },
        "sahkoposti": "sahkoposti@email.com"
      },
      "toimitustapa": "osoite",
      "tyyppiKoodiUri": "liitetyypitamm_0#1"
    }
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus</p>"
    }
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Hakukohteen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimustoinenaste_0#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Tarkenne</p>"
  },
  "tila": "julkaistu",
  "toinenAsteOnkoKaksoistutkinto": false,
  "toteutusOid": "2.1.1.1.1.1",
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>ohjeet ennakkovalmistautumiseen</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>ohjeet erityisjärjestelyihin</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa hakijalle</p>"
        }
      },
      "nimi": {
        "fi": "nimi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-02T10:45",
            "paattyy": "2019-04-02T19:00"
          },
          "jarjestamispaikka": {
            "fi": "paikka"
          },
          "lisatietoja": {
            "fi": "lisatietoja"
          },
          "osoite": {
            "osoite": {
              "fi": "osoite"
            },
            "postinumeroKoodiUri": "posti_0#2"
          }
        }
      ],
      "tyyppiKoodiUri": "valintakokeentyyppi_1#1"
    }
  ],
  "valintaperusteId": "649adb37-cd4d-4846-91a9-84b58b90f928"
};

exports[`editHakukohde > should be able to edit hakukohde #0`] =
{
  "alkamiskausiKoodiUri": "kausi_0#1",
  "alkamisvuosi": 2024,
  "aloituspaikat": 150,
  "ensikertalaisenAloituspaikat": 49,
  "hakuOid": "4.1.1.1.1.1",
  "hakuajat": [
    {
      "alkaa": "2011-11-11T10:30",
      "paattyy": "2011-11-12T11:45"
    }
  ],
  "hakulomake": {},
  "hakulomakeAtaruId": "12345",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "kaytetaanHaunAikataulua": false,
  "kaytetaanHaunAlkamiskautta": false,
  "kaytetaanHaunHakulomaketta": false,
  "kielivalinta": [
    "fi"
  ],
  "liitteet": [
    {
      "kuvaus": {
        "fi": "Kuvaus"
      },
      "nimi": {
        "fi": "Nimi"
      },
      "toimitusaika": "2011-11-11T10:30",
      "toimitusosoite": {
        "osoite": {
          "osoite": {
            "fi": "Osoite"
          },
          "postinumeroKoodiUri": "posti_0#2"
        },
        "sahkoposti": "sahkoposti@email.com"
      },
      "toimitustapa": "osoite",
      "tyyppiKoodiUri": "liitetyypitamm_0#1"
    }
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "metadata": {
    "valintakokeidenYleiskuvaus": {
      "fi": "<p>Valintakokeiden kuvaus - fi</p>"
    }
  },
  "modified": "2019-04-04T08:28",
  "muokkaaja": "1.2.246.562.24.62301161440",
  "muuPohjakoulutusvaatimus": {},
  "nimi": {
    "fi": "Hakukohteen nimi"
  },
  "oid": "6.1.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "pohjakoulutusvaatimusKoodiUrit": [
    "pohjakoulutusvaatimustoinenaste_0#1"
  ],
  "pohjakoulutusvaatimusTarkenne": {
    "fi": "<p>Fi tarkenne</p>"
  },
  "tila": "tallennettu",
  "toinenAsteOnkoKaksoistutkinto": true,
  "toteutusOid": "2.1.1.1.1.1",
  "valintakokeet": [
    {
      "metadata": {
        "erityisjarjestelytMahdollisia": true,
        "liittyyEnnakkovalmistautumista": true,
        "ohjeetEnnakkovalmistautumiseen": {
          "fi": "<p>Ohjeet ennakkovalmistautumiseen - fi</p>"
        },
        "ohjeetErityisjarjestelyihin": {
          "fi": "<p>Ohjeet erityisjärjestelyihin - fi</p>"
        },
        "tietoja": {
          "fi": "<p>Tietoa kokeesta - fi</p>"
        }
      },
      "nimi": {
        "fi": "Kokeen nimi - fi"
      },
      "tilaisuudet": [
        {
          "aika": {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44"
          },
          "jarjestamispaikka": {
            "fi": "Jarjestamispaikka - fi"
          },
          "lisatietoja": {
            "fi": "fi lisatietoja"
          },
          "osoite": {
            "osoite": {
              "fi": "fi osoite"
            },
            "postinumeroKoodiUri": "posti_00350#1"
          }
        }
      ],
      "tyyppiKoodiUri": "tyyppi_1#1"
    }
  ],
  "valintaperusteId": "649adb37-cd4d-4846-91a9-84b58b90f928"
};
